<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageViewMenu"
        android:layout_width="102dp"
        android:layout_height="100dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textSelect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/CheckBox01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_song_1" >
    </CheckBox>

    <CheckBox
        android:id="@+id/CheckBox02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_song_2" >
    </CheckBox>

    <CheckBox
        android:id="@+id/CheckBox03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_song_3" >
    </CheckBox>

    <CheckBox
        android:id="@+id/CheckBox04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_song_4" >
    </CheckBox>

    <CheckBox
        android:id="@+id/CheckBox05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_song_5" >
    </CheckBox>

</LinearLayout>