<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageViewMenu"
        android:layout_width="102dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher" />


    <Button
        android:id="@+id/my_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_music" />
    
    <Button
        android:id="@+id/ex_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ex_music"/>
        
    <Button 
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"/>

</LinearLayout>